Project

General

Profile

Actions

Bug #51375

closed

common/options: min value parsing does not work for millisecond option

Added by Patrick Donnelly almost 3 years ago. Updated almost 3 years ago.

Status:
Resolved
Priority:
High
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

pdonnell@vossi04 ~/ceph/build$ bin/ceph config set global cephsqlite_lock_renewal_timeout 99
*** DEVELOPER MODE: setting PATH, PYTHONPATH and LD_LIBRARY_PATH ***
2021-06-26T02:20:07.329+0000 7f767efe4700 -1 WARNING: all dangerous and experimental features are enabled.
2021-06-26T02:20:07.360+0000 7f767efe4700 -1 WARNING: all dangerous and experimental features are enabled.
Error EINVAL: error parsing value: Value '99' is below minimum 100
pdonnell@vossi04 ~/ceph/build$ bin/ceph config set global cephsqlite_lock_renewal_timeout 100
*** DEVELOPER MODE: setting PATH, PYTHONPATH and LD_LIBRARY_PATH ***
2021-06-26T02:20:10.415+0000 7f66af938700 -1 WARNING: all dangerous and experimental features are enabled.
2021-06-26T02:20:10.447+0000 7f66af938700 -1 WARNING: all dangerous and experimental features are enabled.
Error EINVAL: error parsing value: Value '100' is below minimum 100
pdonnell@vossi04 ~/ceph/build$ bin/ceph config set global cephsqlite_lock_renewal_timeout 1000
*** DEVELOPER MODE: setting PATH, PYTHONPATH and LD_LIBRARY_PATH ***
2021-06-26T02:20:12.179+0000 7fa662664700 -1 WARNING: all dangerous and experimental features are enabled.
2021-06-26T02:20:12.226+0000 7fa662664700 -1 WARNING: all dangerous and experimental features are enabled.
Error EINVAL: error parsing value: Value '1000' is below minimum 100
Actions #1

Updated by Kefu Chai almost 3 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 42042
Actions #2

Updated by Kefu Chai almost 3 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF